--- a/newcovidcasesgraph_py.ipynb
+++ b/newcovidcasesgraph_py.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -60,6 +60,8 @@
         "import csv\n",
         "import matplotlib.pyplot as plt\n",
         "from datetime import datetime\n",
+        "\n",
+        "# data sourced from https://docs.google.com/spreadsheets/d/1405JfiabVJNPmsHRL4_Mut59bdUPF1yKNTrytYqjeYI/edit?usp=sharing\n",
         "\n",
         "filename = 'WHO-COVID-19-global-data.csv'\n",
         "with open(filename) as f:\n",
